hphp/test/zend/bad/ext-standard-versioning/php_sapi_name_variation001.php
<?php
parse_str("foo=BAR", $_POST);

echo php_sapi_name();
?>